# article-explainer

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  article_explainer.py  article_explainer_page.py  docker-compose.yml  img.txt  logging.conf  main_interface.txt  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
config/: settings.py
docs/: small_language_models_summary.txt
explainer/: graph.py  prompts.py  state.py
explainer/service/: config.py  content_loader.py
temp_backup2/: .pre-commit-config.yaml  requirements.txt
tests/: conftest.py  test_config.py
